# local_perception_welding_xweld

./: .gitignore  README.md
local_perception_msgs/: CMakeLists.txt  package.xml
local_perception_msgs/action/: LocalPerception.action  LocalQualityPerception.action
local_perception_msgs/msg/: PointArr.msg  QualityArr.msg  QualityMsg.msg  WeldingArr.msg
local_perception_server/: CMakeLists.txt  package.xml
local_perception_server/config/: config.yaml  config_estimation.yaml  config_quality.yaml  rviz.rviz  rviz_estimation.rviz  rviz_quality.rviz
local_perception_server/data/: README.md  example_pc_rs_435.ply
local_perception_server/docs/: TODO  tests
local_perception_server/include/local_perception_server/: local_perception_server.h
local_perception_server/include/local_perception_server/common/: pcl_complement.h  verbosity_levels.h
local_perception_server/launch/: convert_result_tf.launch  ros_bridge_websocket.launch  run.launch  test.launch  test_welding_estimation.launch  test_welding_quality.launch
local_perception_server/libs/: libstd_vector_complement.so.26.05.2022
local_perception_server/src/: local_perception_server.cpp  local_perception_server_node.cpp
local_perception_server/src/common/: pcl_complement.cpp  verbosity_levels.cpp
