<?xml version="1.0"?>
<package>
  <name>local_perception_msgs</name>
  <version>2.0.0</version>
  <description>The local_perception_msgs package</description>

  <maintainer email="joao.p.souza@inesctec.pt">João Pedro Carvalho de Souza</maintainer>

  <license>CC BY-NC-ND 4.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
