<?xml version="1.0"?>
<package>
  <name>local_perception_server</name>
  <version>1.0.1</version>
  <description>The local_perception_server package</description>

  <maintainer email="joao.p.souza@inesctec.pt">joaopedro</maintainer>

  <license>GPLv3</license>
  <url type="website">https://github.com/ItzMeJP/local_perception_welding_xweld</url>

  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>local_perception_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>pcl</build_depend> <!-- requires to compile pcl from source using branch master-all-pr from https://github.com/carlosmccosta/pcl -->



  <run_depend>pcl</run_depend> <!-- requires to compile pcl from source using branch master-all-pr from https://github.com/carlosmccosta/pcl -->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>local_perception_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>point_cloud_io</run_depend>

</package>
